# xiaoxuan-c-preprocessor

./: Cargo.toml  README.md
src/: ast.rs  ast_printer.rs  char_with_position.rs  charwithposition.rs  context.rs  definition.rs  error.rs  error_printer.rs  errorprinter.rs  evaluator.rs  expression.rs  file_cache.rs  file_provider.rs  header_file_cache.rs  initializer.rs  inline_parser.rs  lexer.rs  lib.rs  location.rs  macro_map.rs  memory_file_provider.rs  native_file_provider.rs  normalizer.rs  parser.rs  peekable_iter.rs  peekableiter.rs  position.rs  preprocess.rs  preprocessor.rs  preprocessor_parser.rs  processor.rs  prompt.rs  range.rs  token.rs  tokenize.rs
src/expression/: ast.rs  ast_printer.rs  evaluator.rs  parser.rs
tests/: processor_test.rs
tests/resources/fs/projects/test/include/: test.h
tests/resources/fs/projects/test/src/common/: app.h
tests/resources/fs/usr/include/: stdlib.h
tests/resources/rootfs/projects/hello/include/: hello.h
tests/resources/rootfs/projects/hello/src/: bar.c  foo.c  lib.c  main.c
tests/resources/rootfs/projects/hello/src/common/: config.h
tests/resources/rootfs/projects/hello/src/header/: bar.h  foo.h
tests/resources/rootfs/projects/hello/src/header/subfolder/: buzz.h
tests/resources/rootfs/projects/test/src/: data.c  lib.c  main.c
tests/resources/rootfs/projects/test/src/header/: data.h
tests/resources/rootfs/usr/include/: stdio.h  stdlib.h
