[package]
name = "ancpp"
version = "0.1.1"
edition = "2024"
#authors = ["Hemashushu <hippospark@gmail.com>"]
description = "A C preprocessor implementation in Rust."
license = "MPL-2.0"
homepage = "https://github.com/hemashushu/xiaoxuan-c-preprocessor"
repository = "https://github.com/hemashushu/xiaoxuan-c-preprocessor"

[dependencies]
hexfloat2 = "0.2.0"
chrono = "0.4.43"
pretty_assertions = "1.4.1"
unicode-normalization = "0.1.25"
