[package]
name = "ancpp"
version = "0.1.1"
edition = "2024"
description = "A C preprocessor compliant with C23 standard implemented in Rust."
license = "MPL-2.0"
homepage = "https://github.com/hemashushu/xiaoxuan-c-preprocessor"
repository = "https://github.com/hemashushu/xiaoxuan-c-preprocessor"
#authors = ["Hemashushu <hippospark@gmail.com>"]

[dependencies]
hexfloat2 = "0.2.0"
chrono = "0.4.43"
pretty_assertions = "1.4.1"
unicode-normalization = "0.1.25"
